--- a/index.html
+++ b/index.html
@@ -4,118 +4,56 @@
   <title>WebStudio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="dz/css/lesson3.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-<nav class="navbar navbar-expand-sm bg-light navbar-light">
-  <div class="container-fluid">
-    <p class="navbar-brand" style="padding-left: 200px; padding-top: 24px; padding-right: 20px;">WebStudio</p>
-    <ul class="navbar-nav" style="padding-right: 800px;">
-      <li class="nav-item" style="padding-right: 20px;">
-        <a class="nav-link" href="#">Студія</a>
-      </li>
-      <li class="nav-item" style="padding-right: 20px;">
-        <a class="nav-link" href="#">Портфоліо</a>
-      </li>
-      <li class="nav-item" style="padding-right: 20px;">
-        <a class="nav-link" href="#">Контакти</a>
-      </li> 
+  <nav class="navbar">
+    <p class="navbar-brand">WebStudio</p>
+    <ul class="nav-links">
+      <li><a class="nav-link" href="#">Студія</a></li>
+      <li><a class="nav-link" href="#">Портфоліо</a></li>
+      <li><a class="nav-link" href="#">Контакти</a></li>
     </ul>
-    <ul class="navbar-nav" style="padding-right: 50px;">    
-      <li class="nav-item">
-        <a class="nav-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="tel:0961111111">+38 096 111 11 11</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <div class="contact-info">
+      <a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a class="contact" href="tel:0961111111">+38 096 111 11 11</a>
+    </div>
+  </nav>
 </header>
 <main>
- <div class="container-fluid" style="background: #2F303A; height: 600px; text-align: center;">
-  <h1 class="h1" style="color: white; text-align: center; padding-top: 220px; padding-left: 600px; padding-right: 600px; padding-bottom: 20px;">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-  <button type="button" style="height: 50px; width: 216px;" class="btn btn-primary">Замовити послуги</button>
- </div>
-
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-3">
-      <h5>УВАГА ДО ДЕТАЛЕЙ</h5>
-      <p style="color: gray;">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-    </div>
-    <div class="col-md-3">
-      <h5>ПУНКТУАЛЬНІСТЬ</h5>
-      <p style="color: gray;">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-    </div>
-    <div class="col-md-3">
-      <h5>ПЛАНУВАННЯ</h5>
-      <p style="color: gray;">Так само консультація з широким активом значною мірою зумовлює.</p>
-    </div>
-    <div class="col-md-3">
-      <h5>СУЧАСНІ ТЕХНОЛОГІЇ</h5>
-      <p style="color: gray;">Значимість цих проблем настільки очевиднаб що реалізація планових завдань.</p>
-    </div>
-  </div>
-</div>
-
-<h2 style="text-align: center;">Чим ми займаємося</h2>
-
-<div class="container mt-5" style="padding-bottom: 120px;">
-  <div class="row">
-    <div class="col-md-4">  
-      <img style="width: 370px; height: 294px;" src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/8dac6a22eff34a388bbc6409758a002e5a58c3ca" alt="Картинка">    
-    </div>
-    <div class="col-md-4">  
-      <img style="width: 370px; height: 294px;" src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/01590214fe209b7db875477ca0f844823574082d" alt="Картинка">   
-    </div>
-    <div class="col-md-4">
-      <img style="width: 370px; height: 294px;" src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/4ca103f5ff490664ba91f138b9f708e01d65306a" alt="Картинка">
-    </div>
-  </div>
-</div>
-
-<h2 style="text-align: center;">Наша Команда</h2>
-
-<div class="container-fluid" style=" width: 1833px; ; height: 648px; display: flex; justify-content: center; padding: 0; margin: 0; padding-top: 140px;">
-  <div class="row">
-    <div style="height: 368px; width: 270px; background-color: white; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-right: 30px;" class="col-md-3">
-      <img style="height: 260px; width: 250px;" src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/8c1e65c101b0562402f9066520924acac0be8dc7" alt="Ігор Демʼяненко">
-      <h5 style="text-align: center;">Ігор Демʼяненко</h5>
-      <p style="text-align: center;">Product Designer</p>
-    </div>
-    <div style="height: 368px; width: 270px; background-color: white; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-right: 30px; padding: 0;" class="col-md-3">
-      <img style="height: 260px; width: 270px; margin: 0; padding: 0;" src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/cbc143718ed9ff0c05008e3e7ae5285b05efd211" alt="Ольга Рєпіна">
-      <h5 style="text-align: center;">Ольга Рєпіна</h5>
-      <p style="text-align: center;">Frontend Developer</p>
-    </div>
-    <div style="height: 368px; width: 270px; background-color: white; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin-right: 30px; padding: 0;" class="col-md-3">
-      <img style="height: 260px; width: 270px;" src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/b9f51817c03fb848ed9dfc89543bbe97156c3661" alt="Микола Тарасов">
-      <h5 style="text-align: center;">Микола Тарасов</h5>
-      <p style="text-align: center;">Marketing</p>
-    </div>
-    <div style="height: 368px; width: 270px; background-color: white; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); padding: 0;" class="col-md-3">
-      <img style="height: 260px; width: 270px;" src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/335d4d847ff905b2d5f56aa0d2b29aa48e997cd8" alt="Михайло Єрмаков">
-      <h5 style="text-align: center;">Михайло Єрмаков</h5>
-      <p style="text-align: center;">UI Designer</p>
-    </div>
-  </div>
-</div>
+  <section class="hero">
+    <h1 id="h1">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+    <button id="button">Замовити послуги</button>
+  </section>
+  <section class="features">
+    <div class="feature"><h3>УВАГА ДО ДЕТАЛЕЙ</h3><p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></div>
+    <div class="feature"><h3>ПУНКТУАЛЬНІСТЬ</h3><p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></div>
+    <div class="feature"><h3>ПЛАНУВАННЯ</h3><p>Так само консультація з широким активом значною мірою зумовлює.</p></div>
+    <div class="feature"><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3><p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></div>
+  </section>
+  <h2 style="text-align: center;">Чим ми займаємося</h2>
+  <section class="gallery">
+    <img src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/8dac6a22eff34a388bbc6409758a002e5a58c3ca" alt="Картинка">
+    <img src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/01590214fe209b7db875477ca0f844823574082d" alt="Картинка">
+    <img src="https://www.figma.com/file/kdAuQh8S4CzHE70obav3Wc/image/4ca103f5ff490664ba91f138b9f708e01d65306a" alt="Картинка">
+  </section>
+  <h2 style="text-align: center;">Наша Команда</h2>
+  <section class="team">
+    <div class="team-member"><img class="team-member-img" src="/home/oleg/Desktop/goiteens/images/Screenshot 2025-02-09 at 16-49-55 01b0562402f9066520924acac0be8dc7 (JPEG Image 4096 × 2734 pixels) — Scaled (35%).png" alt="Ігор Демʼяненко"><h3>Ігор Демʼяненко</h3><p>Product Designer</p></div>
+    <div class="team-member"><img class="team-member-img" src="/home/oleg/Desktop/goiteens/images/Screenshot 2025-02-09 at 16-49-37 8ed9ff0c05008e3e7ae5285b05efd211 (JPEG Image 4096 × 2731 pixels) — Scaled (35%).png" alt="Ольга Рєпіна"><h3>Ольга Рєпіна</h3><p>Frontend Developer</p></div>
+    <div class="team-member"><img class="team-member-img" src="/home/oleg/Desktop/goiteens/images/Screenshot 2025-02-09 at 16-49-16 c03fb848ed9dfc89543bbe97156c3661 (JPEG Image 4096 × 2734 pixels) — Scaled (35%).png" alt="Микола Тарасов"><h3>Микола Тарасов</h3><p>Marketing</p></div>
+    <div class="team-member"><img class="team-member-img" src="/home/oleg/Desktop/goiteens/images/Screenshot 2025-02-09 at 16-48-42 7ff905b2d5f56aa0d2b29aa48e997cd8 (JPEG Image 4096 × 2731 pixels).png" alt="Михайло Єрмаков"><h3>Михайло Єрмаков</h3><p>UI Designer</p></div>
+  </section>
 </main>
-<footer>
-<div class="container-fluid" style="background: #2F303A; height: 300px;">
-  <h2 style="color: white; padding-top: 60px; padding-left: 145px;">WebStudio</h2>
-  <p style="color: white; padding-top: 25px; padding-left: 145px;">м. Київ, пр-т Лесі Українки, 26</p>
-  <p style="color: rgb(160, 160, 160); padding-left: 145px;">info@devstudio.com</p>
-  <p style="color: rgb(160, 160, 160); padding-left: 145px;">+38 096 111 11 11</p>
-</div>
+<footer class="footer">
+  <h2>WebStudio</h2>
+  <p>м. Київ, пр-т Лесі Українки, 26</p>
+  <p class="info">info@devstudio.com</p>
+  <p class="info">+38 096 111 11 11</p>
 </footer>
-
 </body>
 </html>
