--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p class="navbar-brand">WebStudio</p>
     <ul class="nav-links">
       <li><a class="nav-link" href="#">Студія</a></li>
-      <li><a class="nav-link" href="#">Портфоліо</a></li>
+      <li><a class="nav-link" href="/home/oleg/Desktop/goiteens/Webstudio/portfolio.html">Портфоліо</a></li>
       <li><a class="nav-link" href="#">Контакти</a></li>
     </ul>
     <div class="contact-info">
@@ -30,10 +30,10 @@
     <button id="button">Замовити послуги</button>
   </section>
   <section class="features">
-    <div class="feature"><h3>УВАГА ДО ДЕТАЛЕЙ</h3><p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></div>
-    <div class="feature"><h3>ПУНКТУАЛЬНІСТЬ</h3><p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></div>
-    <div class="feature"><h3>ПЛАНУВАННЯ</h3><p>Так само консультація з широким активом значною мірою зумовлює.</p></div>
-    <div class="feature"><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3><p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></div>
+    <div class="feature"><h3 style="margin-bottom: 10px;">УВАГА ДО ДЕТАЛЕЙ</h3><p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p></div>
+    <div class="feature"><h3 style="margin-bottom: 10px;">ПУНКТУАЛЬНІСТЬ</h3><p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p></div>
+    <div class="feature"><h3 style="margin-bottom: 10px;">ПЛАНУВАННЯ</h3><p>Так само консультація з широким активом значною мірою зумовлює.</p></div>
+    <div class="feature"><h3 style="margin-bottom: 10px;">СУЧАСНІ ТЕХНОЛОГІЇ</h3><p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p></div>
   </section>
   <h2 style="text-align: center;">Чим ми займаємося</h2>
   <section class="gallery">
